Add markup for game-board

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Document</title>
+        <link rel="stylesheet" href="./src/style.css" />
+        <title>tic-tac-toe</title>
     </head>
     <body>
-        test
+        <div class="game-board">
+            <div class="game-board__position" data-position="0"></div>
+            <div class="game-board__position" data-position="1"></div>
+            <div class="game-board__position" data-position="2"></div>
+            <div class="game-board__position" data-position="3"></div>
+            <div class="game-board__position" data-position="4"></div>
+            <div class="game-board__position" data-position="5"></div>
+            <div class="game-board__position" data-position="6"></div>
+            <div class="game-board__position" data-position="7"></div>
+            <div class="game-board__position" data-position="8"></div>
+        </div>
         <script src="./dist/app_bundle.js"></script>
     </body>
 </html>
