Add font-awesome and add new-game-btn

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="./src/style.css" />
+        <script src="https://kit.fontawesome.com/b0eb2a0d1e.js"></script>
+
         <title>tic-tac-toe</title>
     </head>
     <body>
@@ -19,6 +21,7 @@
             <div class="game-board__position" data-position="7"></div>
             <div class="game-board__position" data-position="8"></div>
         </div>
+        <button class="new-game-btn">New Game</button>
         <script src="./dist/app_bundle.js"></script>
     </body>
 </html>
